------------------------------------------------------------------------------
CHANGELOG
------------------------------------------------------------------------------
2006-12-26  Robert Ancell  <bob27@users.sourceforge.net>
	* Removed obsolete network game dialog
	* Added difficulty levels for AIs (#388259)
	* Bring up dialog about 3D mode if do not have libraries installed (#389371)

2006-12-19  Robert Ancell  <bob27@users.sourceforge.net>
	* Don't try and redraw view widgets that have not been realized.
	* Fix bug which didn't redraw the whole area in 2D mode.
	* Catch RuntimeError exception that is generated in X systems with
	  no OpenGL support.

2006-12-16  Andreas Røsdal  <andrearo@pvv.ntnu.no>

	* Add some initial documentation. It still needs a lot of work,
	hopefully the gnome documentation project will write something better.

2006-12-10  Robert Ancell  <bob27@users.sourceforge.net>
	* Enable accidentally disabled GConf support.
	* Save window size to configuration.
	* Fix incorrect UCI 'position' command.

2006-12-09  Dennis Cranston  <dennis_cranston@yahoo.com>

	* glade/ai.glade:
	* glade/load_game.glade:
	* glade/new_game.glade:
	* glade/network_game.glade:
	* glade/save_game.glade:  HIG fixes: capitalization, spacing, 
	mnemonic conflicts.
	
2006-12-09  Andreas Røsdal  <andrearo@pvv.ntnu.no>

	* Fix Bug #382057 – assumed paths in python files, by importing
	pyexecdir into python path.

2006-12-09  Andreas Røsdal  <andrearo@pvv.ntnu.no>
	* Fix Bug #381580 – glchess doesn't respect the menu layout selected.

2006-12-07  Robert Ancell  <bob27@users.sourceforge.net>
	* Added Fruit and Amundsen engines to autodetect list.
	* Tell UCI engines they have 5 mins to play to cause them to take time
	  choosing moves.
	* Dynamically generate about dialog.
	* Fix bug loading UCI games.
	* Catch exceptions when reading from chess engines.
	* Ignore escaped PGN data - this allows the loading of games from the
	  Knights chess interface.
