@@ -1,6 +1,9 @@
 ------------------------------------------------------------------------------
 CHANGELOG
 ------------------------------------------------------------------------------
+2006-12-26  paul  <ephraim_owns@hotmail.com>
+	* Added hitch to gtkui.py to import PyGTK before GTK.
+
 2006-12-26  Robert Ancell  <bob27@users.sourceforge.net>
 	* Removed obsolete network game dialog
 	* Added difficulty levels for AIs (#388259)
